Update skip logic and NettyRequest.path
Signed-off-by: Craig Perkins <cwperx@amazon.com>